# damselfly2

./: .broken.log.swp  .gitignore  .notes.swo  .notes.swp  .swp  .test.log.swo  .test.log.swp  .test2.log.swp  .trace.log.swp  .trace2.log.swp  Cargo.toml  README.md  gaddr2line  mtrace_checkpoint.py  notes  output.txt  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  BlockStatusComponent.tsx  CallstackComponent.tsx  Data.tsx  GraphComponent.tsx  GraphSliderComponent.tsx  MapGridComponent.tsx  OperationLogComponent.tsx  PoolSelector.tsx  app.rs  config.rs  consts.rs  damselfly.rs  damselfly2.rs  damselfly_viewer.rs  event.rs  handler.rs  lib.rs  main.rs  map_manipulator.rs  memory.rs  operation_queue_compressor.rs  styles.css  tui.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: consts.rs  damselfly.rs  lib.rs  main.rs
src-tauri/src/damselfly/: consts.rs  memory.rs  viewer.rs
src-tauri/src/damselfly/memory/: memory_cache.rs  memory_cache_snapshot.rs  memory_parsers.rs  memory_pool.rs  memory_pool_list.rs  memory_snapshot.rs  memory_status.rs  memory_update.rs  memory_usage.rs  memory_usage_factory.rs  memory_usage_sample.rs  memory_usage_stats.rs  sampled_memory_usages.rs  sampled_memory_usages_factory.rs  update_sampler.rs  utility.rs
src-tauri/src/damselfly/update_interval/: distinct_block_counter.rs  interval_to_update_converter.rs  overlap_finder.rs  update_interval_factory.rs  update_interval_sorter.rs  update_queue_compressor.rs  utility.rs
src-tauri/src/damselfly/viewer/: damselfly_instance.rs  damselfly_viewer.rs  graph_viewer.rs  map_viewer.rs  memory_block.rs  memory_canvas.rs  memory_usage_sampler.rs  update_pool.rs  update_pool_factory.rs
src/config/: app_default_config.rs  app_memory_map_config.rs
src/damselfly/: consts.rs  controller.rs  damselfly_viewer.rs  graph_widget.rs  instruction.rs  map_manipulator.rs  memory.rs  memory_parsers.rs  memory_structs.rs  update_interval.rs  viewer.rs
src/damselfly/memory/: memory_parsers.rs  memory_status.rs  memory_update.rs  memory_usage.rs  memory_usage_factory.rs  memory_usage_realtime.rs  memory_usage_realtime_factory.rs
src/damselfly/update_interval/: distinct_block_counter.rs  overlap_finder.rs  update_interval_factory.rs  update_interval_sorter.rs  update_queue_compressor.rs  utility.rs
src/damselfly/viewer/: damselfly_viewer.rs  graph_viewer.rs  map_viewer.rs  memory_canvas.rs
src/damselfly2/: consts.rs  instruction_interval_factory.rs  memory.rs  memory_structs.rs  memory_update.rs  update_interval.rs  viewer.rs
src/damselfly2/memory/: memory_parsers.rs  memory_status.rs  memory_update.rs  memory_usage.rs  memory_usage_factory.rs
src/damselfly2/update_interval/: distinct_block_counter.rs  overlap_finder.rs  update_interval_factory.rs  update_interval_linter.rs  update_interval_oracle.rs  update_interval_sorter.rs  update_queue_compressor.rs  utility.rs
src/damselfly2/viewer/: damselfly_factory.rs  damselfly_viewer.rs  graph_viewer.rs  map_viewer.rs  memory_canvas.rs
src/damselfly_old/: controller.rs  map_manipulator.rs  memory_parsers.rs  memory_structs.rs  viewer.rs
src/damselfly_viewer/: consts.rs  instruction.rs  map_manipulator.rs  memory_parsers.rs  memory_structs.rs
src/ui/: file_load.rs  graph.rs  utility.rs
