[package]
name = "map"
version = "0.1.0"
authors = ["pseudograph <sauravvm237@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rand = "0.8.5"
log = "0.4.20"
addr2line = "0.21.0"
object = "0.32.2"
nohash-hasher = "0.2.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
