[package]
name = "map"
version = "0.1.0"
authors = ["pseudograph <sauravvm237@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rand = "0.8.5"
addr2line = "0.21.0"
object = "0.32.2"
nohash-hasher = "0.2.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
symbolic = "12.8.0"
owo-colors = "4.0.0"

egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

log = "0.4.20"

# widgets
egui_plot = "0.26.0"

# native:
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rust-lapper = "1.1.0"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
