[package]
name = "damselfly4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.21.0"
dioxus = { version = "0.5.0-alpha.0", features = ["desktop"] }
manganis = "0.2.0"
nohash-hasher = "0.2.0"
owo-colors = "4.0.0"
rfd = "0.14.0"
rust-lapper = "1.1.0"
serde = "1.0.197"
log = "0.4.21"
dioxus-charts = "0.1.3"
