[package]
name = "damselfly3"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
addr2line = "0.21.0"
object = "0.32.2"
nohash-hasher = "0.2.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
symbolic = "12.8.0"
owo-colors = "4.0.0"
rust-lapper = "1.1.0"
num-traits = "0.2.18"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
